<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignUpActivity"
        android:background="#F8F8F9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/signup_background"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="48dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/hng_board2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32sp"
                android:text="@string/get_started"
                android:textColor="#10507A"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="5dp"
            android:textColorHint="#04ABFB"
            android:textColor="#000"
            android:inputType="text"/>
        <EditText
            android:textColor="#000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/message_icon"
            android:drawablePadding="5dp"
            android:textColorHint="#04ABFB"/>

        <EditText
            android:textColor="#000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:textColorHint="#04ABFB"
            android:drawablePadding="5dp"/>

        <EditText
            android:textColor="#000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="5dp"
            android:textColorHint="#04ABFB"/>

        <Button
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_border"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/already_have_acc"/>
            <TextView
                android:id="@+id/go_to_login"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="7dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#04ABFB"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>